smithy-model/src/test/resources/software/amazon/smithy/model/loader/invalid/use/use-statement-invalid-id.smithy
// Syntax error at line 6, column 16: Unexpected character: '!' | Model
$version: "2.0"

namespace smithy.example

use smithy.api#!
